Add alt tags to share button images

--- a/layouts/partials/icon/email-anchor.html
+++ b/layouts/partials/icon/email-anchor.html
@@ -1,3 +1,3 @@
 <a href="mailto:?subject={{ .Title | default .Site.Title }}&body={{ .Params.excerpt | default .Site.Params.Description }}%0A{{ .Permalink }}">
-  <img height="32px" width="32px" src='{{ "dist/img/email.svg" | absURL }}' />
+  <img height="32px" width="32px" src='{{ "dist/img/email.svg" | absURL }}' alt="email"/>
 </a>
