--- a/layouts/partials/icon/linkedin-anchor.html
+++ b/layouts/partials/icon/linkedin-anchor.html
@@ -2,5 +2,5 @@
 &url={{ .Permalink }}
 &title={{ .Title | default .Site.Title }}
 &summary={{ .Params.excerpt | default .Site.Params.Description }}">
-  <img height="32px" width="32px" src='{{ "dist/img/linkedin.svg" | absURL }}' />
+  <img height="32px" width="32px" src='{{ "dist/img/linkedin.svg" | absURL }}' alt="linkedin" />
 </a>
