Add cookie banner

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -74,5 +74,6 @@
       {{ end }}
     </footer>
     {{ block "scripts" . }}{{ end }}
+    <script type="text/javascript" id="cookiebanner" src="{{ "js/cookiebanner.min.js" | absURL }}"></script>
   </body>
 </html>
