Revert "Set font size to 17px"
This reverts commit f7b82d746510844834a843b15aca8ea228b81454.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,7 +51,7 @@
     {{ end }}
   </head>
 
-  <body>
+  <body class="body-wrapper">
 
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main>
