--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,11 +13,11 @@
   --card-shadow-4: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
   --card-shadow-2: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 
-  --accent: #f55500;
+  --accent: #F55500;
   --primary: #004ba0;
   --primary-light: #63a4ff;
   --light-grey: #f0f4f7;
-  --dark-grey: #b4b6b7;
+  --dark-grey: #B4B6B7;
 
   --small: 576px;
   --medium: 768px;
@@ -67,12 +67,12 @@ html {
   }
 }
 
-body {
+.body-wrapper {
   background-color: var(--light-grey);
   color: var(--black-8);
   line-height: 1.5;
   font-family: georgia, times, serif;
-  font-size: 17px;
+  font-size: 1rem;
 }
 
 .site-header {
@@ -214,7 +214,7 @@ body {
 .article__title {
   font-family: athelas, georgia, serif;
   line-height: normal;
-  margin-top: 0.5rem;
+  margin-top: 0.5rem
 }
 .article__content {
   margin-top: 0.5rem;
@@ -248,14 +248,14 @@ body {
 
 .bio--small {
   @media (--small) {
-    display: none;
+    display: none
   }
 }
 
 .bio--large {
   display: none;
   @media (--small) {
-    display: flex;
+    display: flex
   }
 }
 
@@ -266,7 +266,7 @@ body {
 }
 
 .bio__top {
-  display: flex;
+ display: flex
 }
 
 .bio__left {
@@ -279,8 +279,8 @@ body {
 }
 
 .bio__large__top {
-  display: flex;
-}
+  display: flex
+ }
 
 .bio__large__right {
   margin-left: 1rem;
