--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,22 +13,22 @@
   --card-shadow-4: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
   --card-shadow-2: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 
-  --accent: #F55500;
+  --accent: #f55500;
   --primary: #004ba0;
   --primary-light: #63a4ff;
   --light-grey: #f0f4f7;
-  --dark-grey: #B4B6B7;
+  --dark-grey: #b4b6b7;
 
   --small: 576px;
   --medium: 768px;
   --large: 992px;
 
-  font-size: 14px;
+  font-size: 18px;
   @media (--medium) {
-    font-size: 16px;
+    font-size: 20px;
   }
   @media (--large) {
-    font-size: 20px;
+    font-size: 21px;
   }
 }
 
@@ -214,7 +214,7 @@ html {
 .article__title {
   font-family: athelas, georgia, serif;
   line-height: normal;
-  margin-top: 0.5rem
+  margin-top: 0.5rem;
 }
 .article__content {
   margin-top: 0.5rem;
@@ -248,14 +248,14 @@ html {
 
 .bio--small {
   @media (--small) {
-    display: none
+    display: none;
   }
 }
 
 .bio--large {
   display: none;
   @media (--small) {
-    display: flex
+    display: flex;
   }
 }
 
@@ -266,7 +266,7 @@ html {
 }
 
 .bio__top {
- display: flex
+  display: flex;
 }
 
 .bio__left {
@@ -279,8 +279,8 @@ html {
 }
 
 .bio__large__top {
-  display: flex
- }
+  display: flex;
+}
 
 .bio__large__right {
   margin-left: 1rem;
