Remove redundant content/_index.md

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -4,7 +4,8 @@
       {{ .Title | default .Site.Title }}
     </h1>
     <h3 class="site-header__subheader-text">
-      {{ .Params.Quote }}
+      <i>The more that you read, the more things you will know.
+      The more that you learn, the more places you'll go.</i> - Dr. Seuss
     </h3>
   </div>
 </header>
