--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,9 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
+    {{ block "canonical" . }}
+      <link rel="canonical" href="{{ .Permalink }}">
+    {{ end }}
     <link href='{{ "dist/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
