Add canonical url to 404 page

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,7 @@
+{{ define "canonical" }}
+  <link rel="canonical" href='{{ "/" | absURL }}'>
+{{ end }}
+
 {{ define "header" }}
   {{ partial "site-navigation.html" . }}
 {{ end }}
