Move link to coding challenge to extra-content

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,7 +1,13 @@
-<div class="blog-extras-container nested-links">
-  <div class="blog-extras-container__title">
+<section class="blog-extras-container nested-links">
+  <h3 class="blog-extras-container__title">Before you go</h3>
+  <p>
+    Would you like to receive feedback on your code? I have created a 
+    <a href="https://docs.google.com/document/d/1q0L8qsyxu1Bw8n_fuHT-PsCo-bpav5Qeg6Q5snQ3i9g/edit">coding challenge</a>. 
+    If you submit it, I will review it!
+  </p>
+  <h4>
     You might also like:
-  </div>
+  </h4>
   <ul class="extra-content-items">
     {{ $extraContent := $.Params.extraContent}}
     {{ range $element := $extraContent }}
@@ -13,4 +19,4 @@
     </li>
     {{end}}
   </ul>
-</div>
+</section>
