--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -234,6 +234,7 @@ article img {
   padding: 1rem;
 }
 .blog-extras-container__title {
+  margin: 0;
   font-weight: bolder;
 }
 .blog-extras-container--center {
