Update link to coding challenge

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -2,7 +2,7 @@
   <h3 class="blog-extras-container__title">Before you go</h3>
   <p>
     Would you like to receive feedback on your code? I have created a 
-    <a href="https://docs.google.com/document/d/1q0L8qsyxu1Bw8n_fuHT-PsCo-bpav5Qeg6Q5snQ3i9g/edit">coding challenge</a>. 
+    <a href="https://learnitmyway.com/coding-challenge/">coding challenge</a>. 
     If you submit it, I will review it!
   </p>
   <h4>
