--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,7 +42,7 @@
     {{- template "_internal/schema.html" . -}}
 
     <meta property="fb:app_id" content="366384430479764"/>
-    <meta property="og:image" content='https://res.cloudinary.com/developerdavo/image/upload/f_auto,w_1200/v1590954325/learnitmyway/header.png'/>
+    <meta property="og:image" content="{{ .Params.featured_image | default .Site.Params.share_image }}"/>
     <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
 
     <meta name="twitter:card" content="summary" />
