change github button to link

--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,4 +1,4 @@
 <div class="link-to-repo nested-links">
   View the source code on
-  <button class="btn btn--github" onclick="window.open('https://github.com/DeveloperDavo/learnitmyway','_blank, noopener')">GitHub</button>
+  <a rel="noopener" target="_blank" href="https://github.com/DeveloperDavo/learnitmyway">GitHub</a>
 </div>
