--- a/layouts/partials/icon/twitter-anchor.html
+++ b/layouts/partials/icon/twitter-anchor.html
@@ -1,3 +1,3 @@
 <a class="popup" href="https://twitter.com/intent/tweet?text={{ .Title | default .Site.Title }}&via=learnitmyway%20{{ .Permalink }}">
-  <img height="32px" width="32px" src='{{ "dist/img/twitter.svg" | absURL }}' alt="twitter"/>
+  <img height="32px" width="32px" src='{{ "img/twitter.svg" | absURL }}' alt="twitter"/>
 </a>
