--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -22,6 +22,7 @@
     <section class="article__content nested-links">
       {{ .Content }}
     </section>
+    {{ partial "edit-on-github.html" . }}
   </article>
   <div class="article-extra">
     {{ partial "extra-content.html" . }}
