add plausible analytics

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -50,6 +50,7 @@
     {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
       {{ template "_internal/google_analytics_async.html" . }}
     {{ end }}
+    <script async defer data-domain="learnitmyway.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
 
   <body class="body-wrapper">
