comment on twitter

--- a/layouts/partials/article-footer.html
+++ b/layouts/partials/article-footer.html
@@ -6,3 +6,13 @@
     >
   </div>
 </section>
+{{ with .Params.twitterLink }}
+  <section class="comment-on-twitter-container nested-links">
+    <div>
+      <a
+        href="{{ . }}"
+        >Comment on Twitter</a
+      >
+    </div>
+  </section>
+{{ end }}
