add link to analytics

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,18 +58,11 @@
     </main>
     <footer>
       {{ block "footer" . }}
-      <div>
         {{ partial "link-to-repo" .}}
-      </div>
-      <div>
+        {{ partial "link-to-analytics" .}}
         {{ partial "site-license.html" .}}
-      </div>
-      <div>
         {{ partial "privacy-policy.html" .}}
-      </div>
-      <div>
         {{ block "footer-nav" . }}{{ partial "site-navigation.html" .}}{{ end }}
-      </div>
       {{ end }}
     </footer>
     {{ block "scripts" . }}{{ end }}
