conistent wording for analytics and source code links

--- a/layouts/partials/link-to-analytics.html
+++ b/layouts/partials/link-to-analytics.html
@@ -1,3 +1,4 @@
 <div class="link-to-repo nested-links">
-  <a rel="noopener noreferrer" target="_blank" href="https://plausible.io/learnitmyway.com">Site Analytics</a>
+  Site analytics:
+  <a rel="noopener noreferrer" target="_blank" href="https://plausible.io/learnitmyway.com">Plausible</a>
 </div>
