--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,4 +1,4 @@
 <div class="link-to-repo nested-links">
-  View the source code on
+  Source code: 
   <a rel="noopener" target="_blank" href="https://github.com/DeveloperDavo/learnitmyway">GitHub</a>
 </div>
