add cloudflare analytics

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -48,6 +48,11 @@
     <meta name="twitter:card" content="summary" />
 
     <script async defer data-domain="learnitmyway.com" src="https://plausible.io/js/plausible.js"></script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+      data-cf-beacon='{"token": "7d4d1242c45c496383be6737fd1bb89d"}'>
+    </script>
+    <!-- End Cloudflare Web Analytics -->
   </head>
 
   <body class="body-wrapper">
